# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
gendiff/: __init__.py  __init__.pyy  cli.py  constants.py  converter.py  gendiff.py  generate_diff.py  parser.py
gendiff/files/: deepfile1.yml  deepfile2.yaml
gendiff/formaters/: constants.py  formater.py  json.py  plain.py  stylish.py
gendiff/formatters/: formatter.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: deepfile1.yml  deepfile2.yaml  result_json  tojsonexpected.json
