[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Alexander <alexzhur87@mail.ru>"]
readme = "README.md"
keywords = ["gendiff"]
packages = [{ include = "gendiff" }]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
gendiff ="gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
